# todo-agent-skillworld

./: .env.example  .gitignore  README.md  hello.py  main.py  manage.py  otel_file_exporter.py  pyproject.toml  requirements.txt
agent/: storage.py  todo_agent.py
data/: seed_todos.json  session_default.json  todos.json
instructional_docs/: agent_mermaid_diagram.md  article_draft.md  base_agent_concept.md  community_voice.md  fith_grader_explanation.md  obs_and_tracing_analysis.md  perplexity_cursor_integration.md
tests/: README.md  run_demo_tests.py  test_basic_crud.py  test_basic_operations.py  test_natural_language.py  test_web_search_brainstorming.py  test_web_search_demo.py
todo_gradio/: gradio_app.py
